--- a/src/components/analyze/aq-analyze-home-menu.html
+++ b/src/components/analyze/aq-analyze-home-menu.html
@@ -144,7 +144,8 @@
 	    
 	    	<paper-icon-button noink id="backButton" title="Go Back" icon="icons:arrow-back" on-tap="goToEditor">
 	  			</paper-icon-button>
-	    	<div class="flex"><h4>All Backtests for {{strategyName}}</h4></div>
+
+	    	<p class="self-center flex">Back to Strategies</p>
 
 	      	<div id='menu-icons' class="layout horizontal">
 	  			<paper-icon-button noink class="iconButton" icon="icons:delete" title="Delete"  on-tap="onDelete" disabled="[[!isDeleteActive(numActiveBacktests)]]">
