--- a/src/components/user/aq-user-login-panel.html
+++ b/src/components/user/aq-user-login-panel.html
@@ -105,6 +105,27 @@
         paper-card {
             --paper-card-header-text: { font-size: 30px; }
         }
+        
+        paper-input {
+            --paper-input-container-underline-focus:{
+                background-color: #333a56;
+            }
+        }
+
+        gold-email-input {
+            --paper-input-container-underline-focus:{
+                background-color: #333a56;
+            }
+        }
+
+        paper-button.signinButton {
+            margin-top: 20px !important;
+            background: #333a56;
+            color: white;
+            width:200px;
+            margin: 0 auto;
+
+        }
 
     }
 
