--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -96,7 +96,7 @@
     		
 
 	  			<input id="searchbox" placeholder="Search posts" class="flex"
-	         	value="{{searchValue::input}}" type="search" on-keydown="onSearch">	
+	         	value="{{searchValue::input}}" type="search" on-search="onSearch">	
 			</div>
 	</template>
 	<script >
@@ -127,9 +127,9 @@
 			},
 
 			onSearch(e) {
-				if (e.keyCode == 13) {
-                    this.fire('search-action', {text: this.searchValue, category: this.$.category_dd.getSelectedValue()});
-                }
+				
+                this.fire('search-action', {text: this.searchValue, category: this.$.category_dd.getSelectedValue()});
+           
 			},
 
 		});
