--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -52,7 +52,7 @@
           
           <div class="goBackButton layout horizontal">
             <paper-icon-button noink class="self-center" title="Go Back" icon="icons:arrow-back" on-tap="goBack"></paper-icon-button>
-            <div class="flex"><h4>Back to Community</h4></div>
+            <div class="flex"><p>Back to Community</p></div>
           </div>
           
           <aq-community-postdetail-header
